--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,17 @@
 <body>
     
 {% include 'includes/navbar.html' %}
+
+{% if messages %}
+    <div class="container mt-3">
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">
+            {{ message }}
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+    
 {% block content %}
 
 {% endblock %}
