--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -39,7 +39,14 @@
 	</div> <!-- col.// -->
 	<div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
 				<div class="d-flex justify-content-end mb-3 mb-lg-0">
-					<a href="{% url 'pet:cadastrar_pet' %}" class="btn btn-primary">Cadastrar Pet</a>
+					{% if user.is_authenticated %}
+						<a class="nav-item nav-link" href="{% url 'pet:cadastrar_pet' %}">Cadastrar Pet</a>
+						<span class="nav-item nav-link">Olá, {{ user.username }}</span>
+						<a class="nav-item nav-link" href="{% url 'users:logout' %}">Sair</a>
+					{% else %}
+						<a class="nav-item nav-link" href="{% url 'users:login' %}">Login</a>
+						<a class="nav-item nav-link" href="{% url 'users:register' %}">Cadastrar</a>
+					{% endif %}
 				</div> <!-- widgets-wrap.// -->
 			</div> <!-- col.// -->
 </div> <!-- row.// -->
