--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -27,7 +27,7 @@
 	<div class="col-lg  col-md-6 col-sm-12 col">
 		<form action="#" class="search">
 			<div class="input-group w-100">
-			    <input type="text" class="form-control" style="width:60%;" placeholder="Search">
+			    <input type="text" class="form-control" style="width:50%;" placeholder="Search">
 			    
 			    <div class="input-group-append">
 			      <button class="btn btn-primary" type="submit">
@@ -41,6 +41,7 @@
 				<div class="d-flex justify-content-end mb-3 mb-lg-0">
 					{% if user.is_authenticated %}
 						<a class="nav-item nav-link" href="{% url 'pet:cadastrar_pet' %}">Cadastrar Pet</a>
+						<a class="nav-item nav-link" href="{% url 'pet:gerenciar_pedidos' %}">Gerenciar Pedidos</a>
 						<span class="nav-item nav-link">Olá, {{ user.username }}</span>
 						<a class="nav-item nav-link" href="{% url 'users:logout' %}">Sair</a>
 					{% else %}
