--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,8 @@
 <!-- custom javascript -->
 <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 
+<link rel="stylesheet" href="{% static 'css/navbar_styles.css' %}">
+
 <script type="text/javascript">
 /// some script
 
